Fixing modal overflow

--- a/assets/css/templatemo-breezed.css
+++ b/assets/css/templatemo-breezed.css
@@ -321,6 +321,10 @@ a.text-button-icon:hover i {
   outline: none;
   overflow-y: auto;
 }
+.modal-body{
+  width:100% !important;
+  overflow-y: auto;
+}
 
 
 
